<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text="New Button"
        android:id="@+id/start_date_button"
        android:layout_marginTop="109dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/createDialogStartDateText"
        android:id="@+id/textView5"
        android:layout_above="@+id/end_date_button"
        android:layout_toRightOf="@+id/name_text"
        android:layout_toEndOf="@+id/name_text"/>
    <Button
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text="New Button"
        android:id="@+id/end_date_button"
        android:layout_alignTop="@+id/start_date_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/end_date"
        android:id="@+id/textView6"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/holidays_list"
        android:layout_below="@+id/textView3"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/name_text"
        android:layout_above="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/textView7"
        android:layout_above="@+id/name_text"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/holidays"
        android:id="@+id/textView3"
        android:layout_below="@+id/end_date_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>