<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base.Theme.AppCompat.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".request.ConstraintFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ListView
            android:id="@+id/siteSelectionList"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:choiceMode="multipleChoice" />

        <CheckBox
            android:id="@+id/offCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startDateButton"
            android:layout_toEndOf="@+id/startDateButton"
            android:layout_toRightOf="@+id/startDateButton"
            android:checked="false"
            android:text="@string/offChaeckBoxName" />

        <TextView
            android:id="@+id/startDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_below="@+id/siteSpinner"
            android:layout_marginTop="20dp"
            android:text="@string/createDialogStartDateText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/endDateButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/endDateLabel"
            android:layout_alignStart="@+id/endDateLabel"
            android:layout_alignTop="@+id/startDateButton"
            android:layout_gravity="center_horizontal"
            android:background="#00ffffff"
            android:text="New Button" />

        <Spinner
            android:id="@+id/constraintSpinner"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/residentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/constraintSpinner"
            android:text="@string/resident"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/siteSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/siteSelectionList"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/endDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/startDateLabel"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/end_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/residentSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/residentLabel"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/constraint_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/startDateButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/startDateLabel"
            android:layout_alignStart="@+id/startDateLabel"
            android:layout_below="@+id/startDateLabel"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:alpha="1"
            android:background="#00ffffff"
            android:text="New Button" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/residentLabel"
            android:layout_alignStart="@+id/residentLabel"
            android:layout_below="@+id/residentSpinner"
            android:text="@string/site"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</RelativeLayout>
